TM-11214 Fix overflow ui issues on application views

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -5,11 +5,9 @@
 @import "../../web-app/css/shared-legacy-angular/dates-info.sass"
 
 .tds-angular-component-content
-  .modal-body
-    padding: 6px 18px
-    display: flex
-    justify-content: center
-    align-items: center
+  .dialog-container
+    border: 1px solid #63a242
+    padding: 0
   .prop
     padding: 5px
   .prop .name
@@ -48,7 +46,7 @@
     th, td
       font-size: 13px
       line-height: 12px
-      padding: 0px 2px
+      padding: 0px 4px
       text-align: left
       input
         border: 1px solid #ccc
@@ -69,6 +67,8 @@
         margin-bottom: 4px
     td .label_sm
       background: none repeat scroll 0% 0% #f3f4f6
+    td.valueNW
+      border: 2px solid #fff
     div
       .highField
         label
@@ -92,6 +92,10 @@
         width: 100%
       input
         height: 27px
+        width: 100%
+      input.duration
+        width: 90%
+        margin-right: 2px
     td[data-for].Y,
     td[data-for].G,
     td[data-for].B,
@@ -120,7 +124,7 @@
     td[data-for].B .select2-choice,
     td[data-for].B .k-widget span,
     .B
-      background-color:$color-field-blue !important
+      background-color: $color-field-blue !important
       background-image: none !important
 
     /* PINK */
